Implemented the new integer-ized teams files, modified colors of UI some more

--- a/app/src/main/res/layout/activity_data_entry.xml
+++ b/app/src/main/res/layout/activity_data_entry.xml
@@ -230,7 +230,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:background="#00000000"
+        android:background="#CCCCCC"
         android:entries="@array/teams"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -253,7 +253,7 @@
         android:layout_width="@dimen/text_box_width"
         android:layout_height="48dp"
         android:layout_marginTop="8dp"
-        android:background="#00000000"
+        android:background="#CCCCCC"
         android:entries="@array/matches"
         app:layout_constraintStart_toStartOf="@+id/teamNumber"
         app:layout_constraintTop_toBottomOf="@+id/teamNumber" />
@@ -277,6 +277,7 @@
         android:layout_height="35dp"
         android:layout_marginStart="4dp"
         android:layout_marginBottom="7dp"
+        android:background="#CCCCCC"
         android:ems="10"
         android:hint="@string/scoreTXT"
         android:importantForAutofill="no"
@@ -332,6 +333,7 @@
         android:layout_width="@dimen/text_box_width"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:background="#CCCCCC"
         android:ems="10"
         android:hint="@string/scouterTXT"
         android:importantForAutofill="no"
@@ -362,6 +364,7 @@
         android:layout_height="139dp"
         android:layout_marginStart="4dp"
         android:layout_marginBottom="8dp"
+        android:background="#CCCCCC"
         android:ems="10"
         android:gravity="start|top"
         android:hint="@string/comments"
@@ -455,6 +458,7 @@
         android:layout_height="21dp"
         android:layout_marginStart="156dp"
         android:layout_marginTop="4dp"
+        android:background="#CCCCCC"
         android:entries="@array/autoScoring"
         android:spinnerMode="dropdown"
         app:layout_constraintStart_toStartOf="parent"
@@ -467,6 +471,7 @@
         android:layout_height="21dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
+        android:background="#CCCCCC"
         android:entries="@array/autoScoring"
         android:spinnerMode="dropdown"
         app:layout_constraintStart_toStartOf="parent"
@@ -592,6 +597,7 @@
         android:layout_height="22dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="#CCCCCC"
         android:entries="@array/climb"
         app:layout_constraintStart_toEndOf="@+id/climbAttText"
         app:layout_constraintTop_toBottomOf="@+id/horizontalDivider3"
@@ -604,6 +610,7 @@
         android:layout_height="22dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="#CCCCCC"
         android:entries="@array/climbTime"
         app:layout_constraintStart_toEndOf="@+id/climbAttText"
         app:layout_constraintTop_toBottomOf="@+id/climbAttDropdown"
@@ -627,6 +634,7 @@
         android:layout_height="22dp"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="6dp"
+        android:background="#CCCCCC"
         android:entries="@array/winLossTie"
         app:layout_constraintBottom_toTopOf="@+id/scoreHelp"
         app:layout_constraintStart_toEndOf="@+id/climbResultText"
