--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -22,6 +22,7 @@
         <item>846</item>
         <item>857</item>
         <item>1023</item>
+        <item>1477</item>
         <item>1506</item>
         <item>1619</item>
         <item>1629</item>
@@ -188,6 +189,34 @@
         <item>Match 97</item>
         <item>Match 98</item>
         <item>Match 99</item>
+        <item>Match 100</item>
+        <item>Match 101</item>
+        <item>Match 102</item>
+        <item>Match 103</item>
+        <item>Match 104</item>
+        <item>Match 105</item>
+        <item>Match 106</item>
+        <item>Match 107</item>
+        <item>Match 108</item>
+        <item>Match 109</item>
+        <item>Match 110</item>
+        <item>Match 111</item>
+        <item>Match 112</item>
+        <item>Match 113</item>
+        <item>Match 114</item>
+        <item>Match 115</item>
+        <item>Match 116</item>
+        <item>Match 117</item>
+        <item>Match 118</item>
+        <item>Match 119</item>
+        <item>Match 120</item>
+        <item>Match 121</item>
+        <item>Match 122</item>
+        <item>Match 123</item>
+        <item>Match 124</item>
+        <item>Match 125</item>
+        <item>Match 126</item>
+        <item>Match 127</item>
     </string-array>
 
     <string-array name="climb">
