moved to Saber-Metrics

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/dark_gray"
+    android:background="@color/white"
     android:scaleX="1"
     android:scaleY="1"
     android:translationY="-25px"
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:text="@string/Welcome_Message"
         android:textAlignment="center"
-        android:textColor="@color/light_grey"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:typeface="normal"
         android:visibility="visible"
