--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,15 +6,15 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="dark_gray">#FF1C1C1C</color>
+    <color name="white">#FFFFFF</color>
+    <color name="dark_grey">#FF1C1C1C</color>
     <color name="light_blue_600">#FF039BE5</color>
     <color name="light_blue_900">#FF01579B</color>
     <color name="light_blue_A200">#FF40C4FF</color>
     <color name="light_blue_A400">#FF00B0FF</color>
     <color name="black_overlay">#66000000</color>
     <color name="light_grey">#FFC8C8C8</color>
-    <color name="yellow_A400">#FFFFEA00</color>
-    <color name="yellow_A700">#FFFFD600</color>
-    <color name="buttonTextColor">@color/black</color>
+    <color name="yellow_A400">#FFEB3B</color>
+    <color name="yellow_A700">#FF5722</color>
+    <color name="buttonTextColor">#000000</color>
 </resources>
